--- a/ComputerScienceInternalAssessment.csproj
+++ b/ComputerScienceInternalAssessment.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Forms\StartForm.Designer.cs">
       <DependentUpon>StartForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\SwimmerEventResultModel.cs" />
+    <Compile Include="Models\SwimmerGoalModel.cs" />
+    <Compile Include="Models\SwimmerMeetModel.cs" />
+    <Compile Include="Models\SwimmerModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\SwimmerList.cs">
@@ -150,6 +154,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataBase\" />
+    <Folder Include="Events\" />
+    <Folder Include="Processes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
