--- a/ComputerScienceInternalAssessment.csproj
+++ b/ComputerScienceInternalAssessment.csproj
@@ -82,6 +82,12 @@
     <Compile Include="EditSwimmerListForm.Designer.cs">
       <DependentUpon>EditSwimmerListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImportForm.Designer.cs">
+      <DependentUpon>ImportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditSwimmerListForm.resx">
       <DependentUpon>EditSwimmerListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImportForm.resx">
+      <DependentUpon>ImportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
